--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/swagger": "^11.2.1",
     "@nodeteam/nestjs-prisma-pagination": "^1.0.6",
     "@prisma/client": "^6.19.0",
+    "axios": "^1.13.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cpf-cnpj-validator": "^1.0.3",
