--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.1",
+    "@nestjs/terminus": "^11.0.0",
     "@nodeteam/nestjs-prisma-pagination": "^1.0.6",
     "@prisma/client": "^6.19.0",
     "axios": "^1.13.2",
