--- a/package.json
+++ b/package.json
@@ -20,18 +20,23 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/microservices": "^11.1.9",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.1",
     "@nestjs/terminus": "^11.0.0",
     "@nodeteam/nestjs-prisma-pagination": "^1.0.6",
     "@prisma/client": "^6.19.0",
+    "amqp-connection-manager": "^5.0.0",
+    "amqplib": "^0.10.9",
     "axios": "^1.13.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cpf-cnpj-validator": "^1.0.3",
     "dotenv": "^17.2.3",
+    "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "prisma": "^6.19.0",
     "reflect-metadata": "^0.2.2",
